# FaceAttendanceService

./: .gitignore  README.md  app.py  app.spec  client.py  main.py  requirements.txt  test.py  test_face_search.py  test_hook.py
Deploy/: .env  .gitignore  README.md  make_service.py  mongo_docker.sh  stop_services.sh
ai_cpp/: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py  test_lpn.py  test_scrfd.py  test_yolov8_det.py
ai_cpp/examples/: CMakeLists.txt  char_detect.cpp  demo_scrfd_face_detection.cpp  lpn_detect.cpp  yolov8_detect.cpp
ai_cpp/includes/: char_detection_yolov8.h  detection_yolov8.h  engine_model.h  face_extraction.h  face_manager.h  lpn_detection_yolov8.h  types.h
ai_cpp/python/: CMakeLists.txt
ai_cpp/python/src/: main.cpp
ai_cpp/src/: char_detection_yolov8.cpp  detection_yolov8.cpp  face_detection.cpp  face_extraction.cpp  face_manager.cpp  lpn_detection_yolov8.cpp
ai_cpp/weights/: convert_yolov8.py
auth/: __init__.py  auth.py  models.py  router.py  secret.py  utils.py
database/: camera_db.py  user_db.py
face_client/: .gitignore  README.md  app.py  client.py  main.py  main_ui.py  requirements.txt
face_running_service/: .gitignore  CMakeLists.txt  README.md  deepstream_service_client.py  face.txt  main.cpp  run.sh
face_running_service/includes/: AIController.h  AppConfig.h  CameraManager.h  CustomLogger.h  DataProducer.h  DeepStreamManager.h  Face_Processor.h  FeatureManager.h  LockFreeLifoQueue.h  LockFreeQueue.h  RingBuffer.h  SaveImageThread.h  Tools.h  profiler.h  timer.h
face_running_service/includes/database/: annotation_db.h  camera_db.h  face_attendance_db.h  playback_db.h  setting_db.h
face_running_service/includes/types/: AIControllerInfor.h  CameraInfor.h  FaceAttendanceInfor.h  FaceDetFullInfor.h  FeatureInfor.h  FrameInfor.h  FrameSaving.h  FrameSubmitInfor.h  LPDetFullInfor.h  ObjectInfor.h  ObjectInforFull.h  ObjectUpdatingInfor.h
face_running_service/proto_py/: deepstream_service_pb2_grpc.py
face_running_service/protos/: deepstream_service.proto  gen_py.sh  install_requirements.sh
face_running_service/resource/ai_data/config/: face_manager.yaml  face_manager_searching.yaml  face_search.yaml  lp_det.yaml  lp_det_py.yaml  scrfd.yaml
face_running_service/resource/ai_data/resources/: convert.sh
face_running_service/resource/app_config/: config.json
face_running_service/resource/deepstream/: config.json
face_running_service/resource/deepstream/configs/face_detection/: scrfd_face.txt  yolov8_face.txt
face_running_service/resource/deepstream/configs/face_detection/parser_face/: nvdsparseface_Yolo.cpp
face_running_service/resource/deepstream/configs/face_detection/parser_scrfd/: Makefile  nvdsparsebbox_scrfd.cpp
face_running_service/resource/deepstream/models/: convert.sh
face_running_service/resource/install/: docker-compose.yml
face_running_service/resource/scripts/: build_grpc.sh  build_parser.sh  install_opencv_gpu.sh
face_running_service/resource/test_config/: yolov8.txt  yolov8_face.txt
face_running_service/src/: AIController.cpp  AppConfig.cpp  CameraManager.cpp  CustomLogger.cpp  DataProducer.cpp  DeepStreamManager.cpp  Face_Processor.cpp  FeatureManager.cpp  SaveImageThread.cpp  Tools.cpp  feature_manager_client.cpp  profiler.cpp  timer.cpp
face_running_service/src/ai_solution/: CMakeLists.txt
face_running_service/src/ai_solution/examples/: CMakeLists.txt  char_detect.cpp  demo_scrfd_face_detection.cpp  lp_detect.cpp  test.cpp  yolov8_detect.cpp
face_running_service/src/ai_solution/includes/: char_detection_yolov8.h  face_alignment.h  face_detection.h  face_extraction.h  face_manager.h  face_recognition.h  image_model.h  lp_detection_yolov8.h  types.h
face_running_service/src/ai_solution/src/: char_detection_yolov8.cpp  engine_model.cpp  face_alignment.cpp  face_detection.cpp  face_extraction.cpp  face_manager.cpp  face_recognition.cpp  image_model.cpp  lp_detection_yolov8.cpp
face_running_service/src/database/: camera_db.cpp  face_attendance_db.cpp  playback_db.cpp  setting_db.cpp
face_running_service/src/deepstream_src/: CMakeLists.txt
face_running_service/src/deepstream_src/common/: CMakeLists.txt
face_running_service/src/deepstream_src/common/include/: create_appsink.hpp  create_custom_probe.hpp  create_osd.hpp  create_primary_gie.hpp  create_sink.hpp  create_source.hpp  create_tiler.hpp  create_tracker.hpp
face_running_service/src/deepstream_src/common/src/: create_appsink.cpp  create_custom_probe.cpp  create_custom_probe1.cpp  create_osd.cpp  create_primary_gie.cpp  create_sink.cpp  create_source.cpp  create_tiler.cpp  create_tracker.cpp
face_running_service/src/deepstream_src/config/: CMakeLists.txt
face_running_service/src/deepstream_src/config/include/config/: config.hpp
face_running_service/src/deepstream_src/config/src/: config.cpp
face_running_service/src/deepstream_src/libraries/nvds_common/: CMakeLists.txt
face_running_service/src/deepstream_src/libraries/nvds_common/include/: deepstream_config.h  deepstream_config_file_parser.h  deepstream_sinks.h  deepstream_sources.h  deepstream_tracker.h
face_running_service/src/deepstream_src/libraries/nvds_common/src/: deepstream_config_file_parser.cpp  deepstream_dewarper_bin.cpp  deepstream_sink_bin.cpp  deepstream_source_bin.cpp  deepstream_tracker_bin.cpp
face_running_service/src/deepstream_src/libraries/nvds_common/src/deepstream-yaml/: deepstream_sink_yaml.cpp  deepstream_tracker_yaml.cpp
face_running_service/src/deepstream_src/libraries/nvdslib/: CMakeLists.txt
face_running_service/src/deepstream_src/utils/: CMakeLists.txt
face_running_service/src/deepstream_src/utils/include/utils/: call_bus.hpp
face_running_service/src/psutil-cpp/: CMakeLists.txt
face_running_service/src/psutil-cpp/include/psutil-cpp/: cpu.hpp  mem.hpp
face_running_service/test_python/: consumer.py  procedure.py
install/: .gitignore  docker-compose.yml
scripts/: build_kafka_cpp.sh  install_deepstream.sh  install_grpc.sh  install_lib.sh  install_mongodb.sh  update_cmake.sh
src/: __init__.py  config.py  models.py  (+5 more)
(+46 files in other folders)
