set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# add_executable(test_cpp test.cpp)
# target_link_libraries(test_cpp ${OpenCV_LIBS} AI_SDK)

# add_executable(demo_scrfd_face_detection demo_scrfd_face_detection.cpp)
# target_link_libraries(demo_scrfd_face_detection ${OpenCV_LIBS} AI_SDK)

# add_executable(lpn_detection lpn_detect.cpp)
# target_link_libraries(lpn_detection ${OpenCV_LIBS} AI_SDK)

# add_executable(char_detection char_detect.cpp)
# target_link_libraries(char_detection ${OpenCV_LIBS} AI_SDK)


# add_executable(yolov8_detect yolov8_detect.cpp)
# target_link_libraries(yolov8_detect ${OpenCV_LIBS} AI_SDK)